# game-tracker

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.cursor/agents/: documentation.md
crates/game-tracker-core/: Cargo.toml
crates/game-tracker-core/src/: db.rs  icon_extract.rs  lib.rs  models.rs  rawg.rs  service.rs
crates/game-tracker-core/src/indexers/: epic.rs  mod.rs  steam.rs
crates/game-tracker-core/tests/: epic_indexer_test.rs
crates/game-tracker-core/tests/fixtures/: dlc1.item  game1.item  game2.item
migrations/: 20260211000000_initial_schema.sql  20260213000000_add_source_fields.sql
src/: db.rs  handlers.rs  icon_extract.rs  main.rs  models.rs  rawg.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
static/css/: style.css
static/js/: htmx.min.js
templates/: base.html  game_form.html  game_list.html  game_row.html  index.html  stats.html
ui/: App.tsx  main.tsx
ui/components/: AddGameModal.tsx  GameCard.tsx  Header.tsx  IndexPanel.tsx  Library.tsx  Stats.tsx
ui/hooks/: useBackend.ts
ui/styles/: global.css
