[package]
name = "game-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
askama = "0.12"
askama_axum = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
exeico = "0.1"  # for .exe icon extraction
image = "0.25"  # for image processing/conversion
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"

