[package]
name = "game-tracker-desktop"
version.workspace = true
edition.workspace = true
description = "Game Tracker Desktop App"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
dotenv = "0.15"
game-tracker-core = { path = "../crates/game-tracker-core" }
